# kubernetes-platform

./: .gitignore  .yamllint.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
argocd-apps/: arc-controller.yaml  arc-runners.yaml  argo-rollouts.yaml  argocd-image-updater.yaml  argocd-notifications.yaml  aws-cloud-controller-manager.yaml  aws-ebs-csi-driver.yaml  cert-manager-config.yaml  cert-manager.yaml  cluster-autoscaler.yaml  crossplane-providers.yaml  crossplane-xrds.yaml  crossplane.yaml  descheduler.yaml  ecr-token-refresh.yaml  local-path-provisioner.yaml  metrics-server.yaml  monitoring.yaml  opencost.yaml  traefik.yaml  workload-generator.yaml
charts/argocd-notifications/: notifications-cm.yaml
charts/cert-manager-config/: ops-certificate.yaml
charts/crossplane-providers/manifests/: provider-config.yaml  providers.yaml
charts/crossplane-xrds/chart/: Chart.yaml
charts/crossplane-xrds/chart/templates/: x-encrypted-bucket.yaml  x-monitored-queue.yaml
charts/ecr-token-refresh/: ecr-token-refresh.yaml
charts/monitoring/: deploy-manifests.sh  deploy.py  requirements.txt
charts/monitoring/chart/: Chart.yaml  values-development.yaml  values.yaml
charts/monitoring/chart/dashboards/: auto-bootstrap.json  bedrock.json  bluegreen-rollout.json  cicd.json  cloud-inventory.json  cloudwatch-edge.json  cloudwatch.json  cluster.json  finops.json  frontend.json  monitoring-health.json  nextjs.json  rum.json  self-healing.json  tracing.json
charts/monitoring/chart/templates/: _helpers.tpl  network-policy.yaml  resource-quota.yaml
charts/monitoring/chart/templates/alloy/: configmap.yaml  deployment.yaml  ingressroute.yaml  service.yaml
charts/monitoring/chart/templates/grafana/: configmap.yaml  (+8 more)
charts/monitoring/scripts/: deploy-manifests.ts  validate-dashboards.ts
charts/monitoring/steampipe/: Dockerfile
charts/monitoring/tests/: validate-dashboards.test.ts
charts/traefik/: traefik-values.yaml
deploy_helpers/: README.md  __init__.py  bff.py  config.py  k8s.py  logging.py  requirements.txt  runner.py  s3.py  ssm.py
(+31 files in other folders)
