[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubernetes-platform"
version = "0.1.0"
description = "Kubernetes platform services — Helm charts, ArgoCD apps, and deploy helpers"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "boto3>=1.34",
    "kubernetes>=28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

# ---------------------------------------------------------------------------
# Setuptools — package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = [
    "deploy_helpers*",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["deploy_helpers", "charts/monitoring"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg
    "RUF001", # ambiguous unicode — intentional UI chars
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.isort]
known-first-party = ["deploy_helpers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
